# Junto

./: .dockerignore  .env.example  .gitignore  .neon  .prettierignore  .prettierrc.json  DESIGN.md  Dockerfile  PRODUCT.md  README.md  docker-compose.yml  package-lock.json  package.json  wrangler.jsonc
backend/: pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260719_0001_initial_room_schema.py
backend/junto/: __init__.py  config.py  main.py
backend/junto/access/: __init__.py  middleware.py  request_limits.py  session_middleware.py  sessions.py
backend/junto/api/: presenters.py  routes.py  schemas.py
backend/junto/domain/: __init__.py  entities.py  errors.py  grouping.py  limits.py
backend/junto/engine/: __init__.py  compiler.py  models.py  openrouter.py  openrouter_provider.py  optimizer.py  prompts.py  provider.py
backend/junto/persistence/: __init__.py  database.py  mappers.py  models.py
backend/junto/repositories/: __init__.py  base.py  memory.py  postgres.py
backend/junto/services/: __init__.py  analysis.py  authoring.py  personas.py  references.py  rooms.py  scheduling.py  simulation.py
backend/scripts/: __init__.py  evaluate_semantic.py  evaluate_synthetic_stress.py  load_demo.py  release.py  start.py
backend/tests/: __init__.py  conftest.py  test_api.py  test_application_shell.py  test_authoring.py  test_config.py  test_deployment_contract.py  test_engine_flow.py  test_grouping.py  test_materials.py  test_multi_question_lifecycle.py  test_openrouter.py  test_optimizer.py  test_personas.py  test_reviewed_activity_suite.py  test_room_flow.py  test_science_semantic_fixtures.py  test_security_hardening.py  test_semantic_compiler.py  test_semantic_evaluation.py  test_source_style.py  test_synthetic_classroom.py  test_synthetic_room_service.py  test_synthetic_stress.py
backend/tests/fixtures/semantic/: biology_antibiotic_resistance.json  design_budgeting_onboarding.json  history_western_rome.json  literature_ledger_interpretation.json  (+6 more)
backend/tests/persistence/: __init__.py  conftest.py  test_postgres_repository.py
(+103 files in other folders)
