[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "junto-backend"
version = "0.1.0"
description = "Room-scoped API for the Junto discussion grouping prototype"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1",
  "pydantic>=2.10,<3",
  "python-docx>=1.1,<2",
  "python-multipart>=0.0.20,<1",
  "pypdf>=5,<6",
  "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<1",
  "mypy>=1.15,<2",
  "pytest>=8.3,<9",
  "ruff>=0.11,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["junto"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

