[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "junto-backend"
version = "0.1.0"
description = "Room-scoped API for the Junto discussion grouping prototype"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.16,<2",
  "fastapi>=0.115,<1",
  "httpx>=0.28,<1",
  "itsdangerous>=2.2,<3",
  "openai>=2,<3",
  "ortools>=9.14,<10",
  "pydantic>=2.10,<3",
  "psycopg[binary]>=3.2,<4",
  "python-docx>=1.1,<2",
  "python-dotenv>=1.2,<2",
  "python-multipart>=0.0.20,<1",
  "pypdf>=5,<6",
  "sqlalchemy>=2,<3",
  "uvicorn>=0.34,<1",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.15,<2",
  "pytest>=8.3,<9",
  "ruff>=0.11,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["junto"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
indent-width = 2
line-length = 120
target-version = "py312"

[tool.ruff.format]
indent-style = "space"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
